# flash

./: .gitignore  LICENSE  README.md  pyproject.toml  test_flash.sh
assets/: demo-setup.sh  demo.tape
src/flash/: cli.py  core.py  state.py
