[project]
name = "flash"
version = "0.1.0"
description = "Safely swap your main checkout to a worktree branch and back"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
]

[project.scripts]
flash = "flash.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flash"]
